Fix dropdown arrow color: explicitly set to black (was inheriting browser default blue on mobile)

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -36,6 +36,7 @@
         cursor: pointer;
         font-size: inherit;
         font-family: inherit;
+        color: $color-black;
     }
 
     .nav-dropdown__menu {
